# llm_elicited_predictor

./: LLM-Elicited Bayesian Predictor (b).odp  LLM-Elicited Bayesian Predictor.odp  README.md  main.py  pyproject.toml  setup_environment.py
backup_generated_files/: bayesian_model.py  interpretability.py  main.py
chats/: .chat_feed_in.kate-swp  .~lock.chat-export-1752559830098.json#  PoC_and_agent  chat_feed_in  chat_feed_in_2  project
config/: env.example
data/: features_standardized.csv  metadata.json
data/news/: alpha_vantage_news_20250723_163714.json  hanwha_news.csv  hanwha_news_scored.csv  hanwha_news_with_summaries.csv  monthly_news_scores.csv
data/priors/: hanwha_prior_10.npy  hanwha_prior_14.npy  hanwha_prior_15.npy  hanwha_prior_18.npy  hanwha_prior_20.npy  hanwha_prior_27.npy  hanwha_prior_28.npy  hanwha_prior_30.npy  hanwha_prior_31.npy  hanwha_prior_38.npy  hanwha_prior_39.npy  hanwha_prior_4.npy  hanwha_prior_40.npy  hanwha_prior_47.npy  hanwha_prior_63.npy  (+13 more)
poc1_validation/: __init__.py  base_evaluator.py  bayesian_evaluator.py  compare_all_methods.py  distribution_visualizer.py  model_diagnostics.py  naive_llm_evaluator.py  test_bayesian_evaluator.py  test_distributions.py  test_fixed_evaluator.py  test_naive_llm.py
poc2_demonstration/: decision_dashboard.py  executive_explainer.py  scenario_manager.py  scenario_predictor.py
tests/: debug_alpha_vantage.py  debug_feature_matching.py  debug_json_conversion.py  debug_prior_loading.py  debug_real_method.py  test_data_informed_elicitor.py  test_data_informed_stage2.py  test_news_date_filtering.py
(+194 files in other folders)
