[project]
name = "llm-elicited-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Seongwon Yun",email = "seongwon.yun2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "openai (>=1.95.1,<2.0.0)",
    "arviz (>=0.22.0,<0.23.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tavily-python (>=0.7.10,<0.8.0)",
    "anthropic (>=0.58.2,<0.59.0)"
]

[tool.poetry]
packages = [{include = "hanwha_predictor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
